--- a/index.html
+++ b/index.html
@@ -6,33 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Primary Meta Tags -->
-	<title>Daniel Ezekiel - Software Engineer</title>
+	<title>Muneeb - Data Engineer</title>
 	<meta name="title" content="Muneeb Ul Hassan - Software Engineer">
 	<meta name="keywords"
-		content="Daniel Ezekiel, Daniel Boluwatife Ezekiel, Daniel Ezekiel Software Engineer, Daniel, Ezekiel, db-ezekiel, db_ezekiel">
+		content="Muneeb Ul Hassan, Data engineer, muneeb">
 	<meta name="description"
-		content="Daniel Ezekiel is a software engineer who specializes in passionately delivering characteristic web solutions and experiences.">
-	<meta name="image" content="https://danielezekiel.me/img/og-img.png">
-
-	<!-- Open Graph / Facebook -->
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://danielezekiel.me/">
-	<meta property="og:title" content="Daniel Ezekiel - Software Engineer">
-	<meta property="og:description"
-		content="Daniel Ezekiel is a software engineer who specializes in passionately delivering characteristic web solutions and experiences.">
-	<meta property="og:image" content="https://danielezekiel.me/img/og-img.png">
-
-	<!-- Twitter -->
-	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://danielezekiel.me/">
-	<meta name="twitter:creator" content="@db_ezekiel">
-	<meta property="twitter:title" content="Daniel Ezekiel - Software Engineer">
-	<meta property="twitter:description"
-		content="Daniel Ezekiel is a software engineer who specializes in passionately delivering characteristic web solutions and experiences.">
-	<meta property="twitter:image" content="https://danielezekiel.me/img/og-img.png">
-
-	<!-- Google Site Verification -->
-	<meta name="google-site-verification" content="E3BIWUOc96P_KBsDuKlAoED7-iZZXuicZ4nhcSskbYY" />
+		content="Muneeb Ul Hassan is data engineer who has a passion for building scalable data-driven systems.">
 
 	<!-- site favicon link -->
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
@@ -40,7 +19,6 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
 	<link rel="manifest" href="img/favicon/site.webmanifest">
 
-	<link rel="“canonical”" href="https://danielezekiel.me/index.html">
 	<!-- external CSS link -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -69,7 +47,7 @@
 				</li>
 
 				<li class="nav-social-links social-links">
-					<a href="https://github.com/daniel-ezekiel" target="_blank" class="social github">
+					<a href="https://github.com/monybluex" target="_blank" class="social github">
 						<img src="img/github.svg" alt="GitHub Icon">
 					</a>
 
@@ -121,7 +99,7 @@
 				<img src="img/github.svg" alt="GitHub Icon">
 			</a>
 
-			<a href="https://www.linkedin.com/in/db-ezekiel/" target="_blank" class="social linkedin">
+			<a href="https://www.linkedin.com/in/muneeb-hassan-26bb37130/" target="_blank" class="social linkedin">
 				<img src="img/in.svg" alt="LinkedIn Icon">
 			</a>
 
@@ -187,7 +165,7 @@
 				<div class="project-details-box">
 					<div class="project-main-info">
 						<span>Project #1</span>
-						<h3>Pokemon-Pedia</h3>
+						<h3>Employee Performance Dashboard</h3>
 						<p>
 							A KPI Dashboard representing what teams are doing and what is the efficiency of employees compared with their work hours with scalable and partitioned data model..
 						</p>
@@ -203,7 +181,7 @@
 					</div>
 
 					<div class="project-tools">
-						<p>HTML5, CSS3, JavaScript, API</p>
+						<p>Power BI, DAX, API</p>
 					</div>
 				</div>
 
@@ -218,9 +196,9 @@
 				<div class="project-details-box">
 					<div class="project-main-info">
 						<span>Project #2</span>
-						<h3>EDIE Agency Website</h3>
+						<h3>Cash FLow Dashboard</h3>
 						<p>
-							Dashboard having multiple pages to show, data breaches and how impactful is that, any software that is installed on a organization laptop which might cause impact to data loss.
+							A Power BI dashboard to show and compare the actual and predicted cash flow of a company which will help understand how the company is performing.
 						</p>
 
 						<div class="project-links">
@@ -234,7 +212,7 @@
 					</div>
 
 					<div class="project-tools">
-						<p>HTML5, CSS3, JavaScript</p>
+						<p>Power BI, Microsoft Dynamics </p>
 					</div>
 				</div>
 
@@ -249,9 +227,9 @@
 				<div class="project-details-box">
 					<div class="project-main-info">
 						<span>Project #3</span>
-						<h3>Space Club OAU</h3>
+						<h3>Netowrk Security Dashboard</h3>
 						<p>
-							A Power BI dashboard to show and compare the actual and predicted cash flow of a company which will help understand how the company is performing.
+							Dashboard having multiple pages to show, data breaches and how impactful is that, any software that is installed on a organization laptop which might cause impact to data loss.
 						</p>
 
 						<div class="project-links">
@@ -391,11 +369,11 @@
 		</div>
 
 		<aside class="contact-social-links social-links">
-			<a href="https://github.com/daniel-ezekiel" target="_blank" class="social github">
+			<a href="https://github.com/monybluex" target="_blank" class="social github">
 				<img src="img/github.svg" alt="GitHub Icon">
 			</a>
 
-			<a href="https://www.linkedin.com/in/db-ezekiel/" target="_blank" class="social linkedin">
+			<a href="https://www.linkedin.com/in/muneeb-hassan-26bb37130/" target="_blank" class="social linkedin">
 				<img src="img/in.svg" alt="LinkedIn Icon">
 			</a>
 
