--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		</section>
 
 		<aside class="main-social-links social-links">
-			<a href="https://github.com/daniel-ezekiel" target="_blank" class="social github">
+			<a href="https://github.com/monybluex" target="_blank" class="social github">
 				<img src="img/github.svg" alt="GitHub Icon">
 			</a>
 
@@ -246,7 +246,7 @@
 
 				<div class="project-image-box">
 					<a href="https://spacecluboau.com.ng/" target="_blank" class="project-img-link">
-						<img src="img/project3.webp" alt="Project Preview Image">
+						<img src="img/project3.png" alt="Project Preview Image">
 					</a>
 				</div>
 			</div>
@@ -255,11 +255,9 @@
 				<div class="project-details-box">
 					<div class="project-main-info">
 						<span>Project #4</span>
-						<h3>SPC-APOD APP</h3>
+						<h3>Events report</h3>
 						<p>
-							This is a Web App built using the NASA API to obtain a Picture of the Day depending on a
-							date input provided by the site visitor. It was developed for Space and Star-gazing
-							enthusiasts all around the world.
+							A Dashboard represneting information of organized events and how it is many number of attendies, location and other relevent information, helping the viewer to organize a better event. 
 						</p>
 
 						<div class="project-links">
@@ -273,13 +271,13 @@
 					</div>
 
 					<div class="project-tools">
-						<p>HTML5, CSS3, JavaScript, API</p>
+						<p>Power BI, Python, PG SQL</p>
 					</div>
 				</div>
 
 				<div class="project-image-box">
 					<a href="https://spc-apod.netlify.app/" target="_blank" class="project-img-link">
-						<img src="img/project4.webp" alt="Project Preview Image">
+						<img src="img/project4.png" alt="Project Preview Image">
 					</a>
 				</div>
 			</div>
@@ -365,7 +363,7 @@
 				a great time while we&apos;re at it.
 			</p>
 
-			<a href="mailto:dbezekiel77@gmail.com" class="cta cta2">Get in Touch</a>
+			<a href="mailto:mh8633b@gmail.com" class="cta cta2">Get in Touch</a>
 		</div>
 
 		<aside class="contact-social-links social-links">
